<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <TextView
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/LabelTextColor"
        android:textSize="27dp"
        android:text="Are you sure about your info ?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/name"
            android:textColor="@color/LabelTextColor"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtNameConfirm"
            android:textColor="@color/LabelTextColor"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />







    </LinearLayout>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/LabelTextColor"
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email : "/>

        <TextView
            android:id="@+id/txtEmailconfirm"
            android:textColor="@color/LabelTextColor"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:text="@string/age"
            android:textColor="@color/LabelTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
           android:id="@+id/txtAgeConfirm"
            android:textColor="@color/LabelTextColor"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/phone"
            android:textColor="@color/LabelTextColor"
            android:textSize="25sp"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtPhoneConfirm"
            android:textColor="@color/LabelTextColor"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/BtnYes"
            android:textSize="27sp"
            android:text="@string/yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/BtnNo"
            android:textSize="27sp"
            android:text="@string/no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>



</LinearLayout>


